--- a/todo.txt
+++ b/todo.txt
@@ -7,19 +7,19 @@ Global :
 Sprites :
 x Les persos
 - Le sablier
-- Case a voler
-- Case Exit
+x Case a voler
+x Case Exit
 - Vortex
 - echelle
 - mur plein
 - mur entre cases
-- sol
+x sol
 
 Phase 1 :
 x niveau 10x15
 x mouvement des 4 persos
 x recuperation des objets
-- ajout / activation sortie
+x ajout / activation sortie
 - délai de 3 min
 - ajout mode debug
 x Ajout Image
