--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,11 @@ x sol
 x commandes de jeu
 - discuss amelioration
 x zone de renfort
-- fleche vrai sélection vortex
+x fleche vrai sélection vortex
+x tous les sorts
+x garde transformé en grenouille
+x anneau invisibilité
+x anneau fantome
 
 Phase 1 :
 x niveau 10x15
@@ -47,16 +51,16 @@ x affichage controles
 
 Phase 3 :
 x ajout exploration(OOF)
-- Création de toutes les tuiles
+x Création de toutes les tuiles
 x mise à jour sauvegarde
 x Ajout pion garde
 x Ajout garde de renfort
 x Rendre chaque garde différenciable dans la sélection
 x Repare conflit escalator entre tuile
-- fixe téléportation (detection de pion sur les cases vortex + detection FBI dans la zone)
-- Rendre l'exploration sans feinte pour le joueur (montrer que on peut pas visiter au bord de la carte)
-- fixe beug escalator coin bas gauche
-- fixe timer (stop a 0:59)
+x fixe téléportation (detection de pion sur les cases vortex + detection FBI dans la zone)
+x Rendre l'exploration sans feinte pour le joueur (montrer que on peut pas visiter au bord de la carte)
+x fixe bug escalator coin bas gauche (cherche une pair hors des limites du terrain ?)
+x fixe timer (probleme du stop a 0:59)
 --------------------
 - Ajout mur cassé (3 joker)
 - fixation des murs par les gardes au passage
@@ -64,15 +68,15 @@ x Repare conflit escalator entre tuile
 --------------------
 - sort magicienne (yen a plein) :
 - sort balai (ok)
-- sort boule de cristal (non)
-- sort code (non)
 - sort echange (ok)
 - sort teleportation (ok)
-- sort clairvoyance (oof)
 - sort fantome (ok)
 - sort grenouille (ok)
-- sort invisibilité
-- McTroollald's
+- sort invisibilité (ok)
+- McTroollald's (ok)
+- sort boule de cristal (non)
+- sort code (non)
+- sort clairvoyance (non)
 --------------------
 - La salle des gardes
 - les portes blindés et les codes
