--- a/todo.txt
+++ b/todo.txt
@@ -72,6 +72,9 @@ x sort balai (ok)
 - sort teleportation (ok)
 - sort fantome (ok)
 - sort grenouille (ok)
+  - defaite apres retransformation
+  - changement de selection apres transformation si le pion transformé est selectionné
+  - suppression de sa collision
 - sort invisibilité (ok)
 - McTroollald's (ok)
 - sort boule de cristal (non)
